--- a/GNN_4.ipynb
+++ b/GNN_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoTW2SWWXDdVpl9toFaX4m",
+      "authorship_tag": "ABX9TyN9pWZnLPnlkA2iLR0tfvz5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,9 +158,7 @@
         "    loss = loss_fn(out, data.y)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
-        "    print(f'Epoch {epoch+1}, Loss: {loss.item()}')\n",
-        "\n",
-        "# Model is trained and ready for evaluation\n"
+        "    print(f'Epoch {epoch+1}, Loss: {loss.item()}')"
       ],
       "metadata": {
         "colab": {
@@ -385,15 +383,12 @@
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
         "import time\n",
         "\n",
-        "# Assuming you have trained your model and have validation/test data\n",
         "model.eval()\n",
         "\n",
-        "# Forward pass on test/validation data\n",
         "with torch.no_grad():\n",
         "    out = model(data)\n",
         "    pred = out.argmax(dim=1)\n",
         "\n",
-        "# Performance Metrics\n",
         "accuracy = accuracy_score(data.y.cpu(), pred.cpu())\n",
         "precision = precision_score(data.y.cpu(), pred.cpu(), average='macro')\n",
         "recall = recall_score(data.y.cpu(), pred.cpu(), average='macro')\n",
